# enpm700_midterm_project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: run-unit-test-and-upload-codecov.yml
UML/final/: class_diagram
app/: CMakeLists.txt  main.cpp
design/: QuadChart.pptx
docs/html/: DepthMapApp_8hpp.html  DepthMapApp_8hpp__dep__incl.map  DepthMapApp_8hpp__dep__incl.md5  DepthMapApp_8hpp__incl.map  DepthMapApp_8hpp__incl.md5  DepthMapApp_8hpp_source.html  annotated.html  classDepthCalculator-members.html  classDepthCalculator.html  classDepthCalculator__coll__graph.map  classDepthCalculator__coll__graph.md5  classHumanDetector-members.html  classHumanDetector.html  classHumanDetector__coll__graph.map  classHumanDetector__coll__graph.md5  classHumanPoseEstimator-members.html  classHumanPoseEstimator.html  classHumanPoseEstimator__coll__graph.map  classHumanPoseEstimator__coll__graph.md5  classHumanPoseEstimator_aab5aad348be1df8a1a4947fde631ffee_icgraph.map  classHumanPoseEstimator_aab5aad348be1df8a1a4947fde631ffee_icgraph.md5  classes.html  dir_000000_000001.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.map  dir_d422163b96683743ed3963d4aac17747_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  humandetector_8hpp.html  humandetector_8hpp__dep__incl.map  humandetector_8hpp__dep__incl.md5  humandetector_8hpp__incl.map  humandetector_8hpp__incl.md5  humandetector_8hpp_source.html  (+16 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
include/: CMakeLists.txt  DepthMapApp.hpp  humandetector.hpp  humanposeestimator.hpp
results/: cpplint.txt
src/: DepthMapApp.cpp  humandetector.cpp  humanposeestimator.cpp
test/: CMakeLists.txt  test.cpp
